<!--
  ~ Copyright (c) 2021 lululujojo123
  ~
  ~ strings.xml
  ~
  ~ created by: Andreas G.
  ~ last edit \ by: 2021/02/03 \ Andreas G.
  -->

<resources>
    <string name="app_name">BattleCreatures</string>
    <string name="so_shield">Shield</string>
    <string name="so_sword">Sword</string>
    <string name="btn_sword_next_title">Next</string>
    <string name="scan_qr_tutorial_text">
        Scan your card\'s QR codes
    </string>
    <string name="scan_qr_tutorial_title">ScanQR</string>
    <string name="start_playing_tutorial_text">
        Play with them against the npc player
    </string>
    <string name="start_playing_tutorial_title">StartPlaying</string>
    <string name="allow_permissions_tutorial_text">
        Therefore we need access to your camera
    </string>
    <string name="allow_permissions_tutorial_title">AllowPermissions</string>
    <string name="dialog_exit_application_text">Do you really want to close the application?</string>
    <string name="dialog_error_api_fetching">The API sync failed. The application will use the most recent data. It could be possible that the app doesn\'t work well. Check your internet connection and restart the application.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="player_level_background">PlayerLevelBackground</string>
    <string name="player_level_init_value">0</string>
    <string name="btn_start_game_title">Start game</string>
    <string name="btn_card_deck">Cards</string>
    <string name="btn_card_scan">Scan a card</string>
    <string name="btn_back">Back</string>
    <string name="qr_scan_failed">Card scan wasn\'t successful. Please try again. Internet connection is required.</string>
    <string name="qr_result_invalid">This QR-Code doesn\'t match any of the playable cards</string>
    <string name="card_successfully_added">The card % was added successfully.</string>

    <string name="new_game">Start New Game</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="how_many_cards">Against how many cards did you win?</string>
    <string name="continue_btn">Continue</string>
    <string name="earned_exp_1">You earned</string>
    <string name="earned_exp_2">Exp !</string>
    <string name="no_earned_exp">You didnt earn any Exp this time.</string>

    <!-- Variable names for different languages -->
    <string name="card_name_field_name">name</string>
    <string name="card_image_url_field_name">imageURL</string>

    <string name="edit_name_hint">Please enter a name</string>
    <string name ="needed_exp_1">You need</string>
    <string name ="needed_exp_2">Exp to reach the next level</string>
    <string name ="wrong_name_length">Please enter a name with 1 to 10 characters!</string>

    <!-- Variable names for different languages -->
    <string name="card_name_field_name">name</string>
    <string name="card_image_url_field_name">imageURL</string>

    <!-- !!! DO NOT TRANSLATE !!! -->
    <string name="application_shared_preferences" translatable="false">org.battlecreatures.appSharedPref</string>
    <string name="sp_value_tutorial_completed" translatable="false">org.battlecreatures.appSharedPref.tutorialCompleted</string>
    <string name="db_name" translatable="false">db_battlecreatures</string>
    <string name="card_id_intent_extra" translatable="false">card_id</string>
</resources>