<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 lululujojo123
  ~
  ~ activity_splash.xml
  ~
  ~ created by: Andreas G.
  ~ last edit \ by: 2020/12/26 \ Andreas G.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_500"
    tools:context=".activities.SplashActivity">


    <ImageView
        android:id="@+id/soShieldImageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/so_shield"
        android:src="@drawable/so_shield"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/soSwordImageView1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/so_sword"
        android:src="@drawable/so_sword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/soSwordImageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/so_sword"
        android:rotation="270"
        android:src="@drawable/so_sword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/appTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/triforce"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soShieldImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>